--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
+    "eslint-config-next": "^14.0.3",
     "framer-motion": "^10.16.4",
-    "next": "13.5.4",
+    "next": "^14.0.3",
     "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.17",
     "autoprefixer": "^10",
     "postcss": "^8",
     "tailwindcss": "^3",
